silly small update to template

--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -33,13 +33,13 @@
     <hr>
 
     <div class="left">
-      <h4>Hours Worked: <%= hours_total %></h4>
+      <h4>Total Hours Worked: <%= hours_total %></h4>
       <h4>Payment Due: $<%= money_total %></h4>
     </div>
 
     <div class="right text-right">
-      <h4>Design Code Freedom :)</h4>
-      <em>Invoice made with <a href="https://github.com/bnvk/Beardo" target="_blank">Beardo</a></em>
+      <em>Design. Code. Freedom.</em><br>
+      <em>Made with <a href="https://github.com/bnvk/Beardo" target="_blank">Beardo</a></em>
     </div>
 
     <div class="clear"></div>
