added rudimentary export support to PDF using wkhtmltopdf

--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -4,7 +4,83 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title><%= generated_name %></title>
 
-<link href="invoice.css" rel="stylesheet" type="text/css" media="all" /> 
+<style type="text/css">
+/* http://meyerweb.com/eric/tools/css/reset/ v2.0b1 | 201101  NOTE: WORK IN PROGRESS USE WITH CAUTION AND TEST WITH ABANDON */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; outline: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
+body { line-height: 1; }
+ol, ul { list-style: none; }
+blockquote, q { quotes: none; }
+blockquote:before, blockquote:after,
+q:before, q:after { content: ''; content: none; }
+/* remember to highlight inserts somehow! */
+ins { text-decoration: none; }
+del { text-decoration: line-through; }
+table { border-collapse: collapse; border-spacing: 0; } 
+strong { font-weight:bold; } 
+em { font-style:italic; }
+
+/*	Social-Igniter : Theme : site_simple 
+*	Author : Brennan Novak
+* 	Contact : contact@social-igniter.com 
+*/
+* { margin: 0; }
+body 		{ height: 100%; margin: 0; font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 21px; }
+h1			{ font-size: 36px; line-height: 36px; margin: 0 0 10px 0; padding: 0px; font-weight: bold; }
+h2 			{ font-size: 30px; line-height: 30px; margin: 0 0 10px 0; padding: 0px; font-weight: bold; }
+h3	 		{ font-size: 24px; line-height: 24px; margin: 0 0 10px 0; padding: 0px; font-weight: bold; }
+h4		 	{ font-size: 21px; margin: 0 0 10px 0; font-weight: bold; }
+a:link 			{ color: #bd0707; text-decoration: none; line-height: 21px; font-weight: bold; }
+a:visited		{ color: #bd0707; text-decoration: none; }
+a:hover			{ color:#960f0f; text-decoration: underline; }
+a:active		{ text-decoration: none; }
+p 			{ margin: 15px 0; }
+hr      { margin: 25px 0; }
+ul			{ margin: 0px; padding: 0px 0px 0px 20px; list-style-type: square; }
+ul li		{ margin: 0px; padding: 0px; }
+blockquote	{ width: 75%; font-size: 30px; line-height: 36px; color: #999999; border-left: 8px solid #D9D9D9; padding: 5px 0 5px 25px; margin: 25px 0; font-style: italic; }
+blockquote a { font-size: 30px !important; line-height: 36px !important; }
+blockquote em{ background-color: #dddddd; color: #333333; padding: 0 4px; }
+
+label		{ display: block; font-weight: bold; font-size: 14px; line-height: 21px; }
+
+input[type=text], input[type=password], input[type=email], input[type=url] { height: 28px; background: #fff; font-size: 13px; font-family: Arial, Helvetica, sans-serif; margin: 0 10px 10px 0; padding: 0 10px; border-radius: 3px; outline: none; -webkit-border-radius: 3px; -moz-border-radius: 3px; border: 1px solid #999; }
+input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, input[type=url]:focus { height: 28px; background: #fff; margin: 0 10px 10px 0; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border: 1px solid #cccccc; outline: none; -moz-box-shadow: 0 0 3px #333; -webkit-box-shadow: 0 0 3px #333; box-shadow: 0 0 3px #333; }
+
+textarea 					{ background: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 14px; padding: 10px; border-radius: 5px;  -webkit-border-radius: 5px; -moz-border-radius: 5px; border: 1px solid #cccccc; outline: none; }
+textarea:focus 				{ background: #ffffff; outline: none; -moz-box-shadow: 0 0 4px #c3c3c3; -webkit-box-shadow: 0 0 4px #c3c3c3; box-shadow: 0 0 4px #c3c3c3; }
+
+pre 		{ width: 600px; padding: 1em; background: #e3e3e3; }
+code 		{ background: #e3e3e3; }
+
+dl { padding: 1em 2em; background: #e3e3e3; }
+dt { font-size: 30px; display: block; }
+dd { margin-left: 1em; font-style: italic; }
+
+.left     { float: left; display: inline-block; }
+.right    { float: right; display: inline-block; }
+.text-left{ text-align: left; }
+.text-right { text-align: right; }
+.clear 		{ clear: both; }
+.hide		  { display: none; }
+.wrapper 	{ min-height: 100%; height: auto !important; height: 100%; margin: 0 auto -440px; }
+
+/* Pages */
+#container						{ width: 90%; min-height: 450px; margin: 35px; }
+#container ul					{ margin: 15px 0 0 20px; }
+#container p					{ margin: 25px 0 15px 0; }
+#container table				{ width: 100%; margin: 15px 0; }
+#container table td				{ padding: 0px 10px 5px 0;  }
+
+#title 							{ border-bottom: 3px solid #d9d9d9; margin: 0; padding: 0; }
+#sub_title						{ margin: 5px 0 15px 0; }
+#published_date					{ display: block; float: right;  color: #999999; font-style: italic; }
+#name-icons { width: 112px; height: 28px; float: right; margin-bottom: 10px; }
+
+</style>
 
 </head>
 <body>
@@ -19,6 +95,10 @@
 
     <div class="right text-right">
       <h1>Brennan Novak</h1>
+      <div id="name-icons">
+        <?xml version="1.0" standalone="no"?><!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg width="112px" height="30px" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;"><g><g id="Layer1" transform="matrix(0.0933333,0,0,0.1,0,0)"><g transform="matrix(0.439453,0,0,0.439453,24,28)"><path d="M407.256,3.2252c-6.4639,3.961 -55.2562,54.4125 -55.2562,56.9142c0,2.0848 101.338,99.8606 103.631,99.8606c1.0426,0 13.7619,-11.8832 28.1494,-26.6851c28.5664,-29.1868 31.6941,-34.6072 25.6472,-46.6989c-1.6681,-3.7526 -20.4343,-24.6003 -41.2858,-46.0734c-34.8218,-36.0666 -38.5751,-39.4022 -46.2901,-40.2361c-5.8384,-0.8339 -10.2172,0 -14.596,2.9187ZM57.3333,341.577l52.2579,44.6263c28.562,24.513 54.5851,46.5118 57.5471,48.8165l5.2892,3.98074l123.134,-118.794c67.9141,-65.368 128.423,-123.612 134.559,-129.688l11.2132,-10.6851l-55.0082,-51.7497c-30.2546,-28.4937 -55.643,-51.7497 -56.7009,-51.7497c-0.8462,0 -62.6248,59.7112 -137.098,132.622l-135.193,132.622ZM39.3884,369.041c-1.04379,3.8008 -6.05398,20.0597 -10.8554,36.3187c-8.55908,28.5058 -8.55908,29.3505 -4.80144,33.1512c2.08758,2.11155 16.4919,14.7808 31.94,27.8724l28.1823,24.2828l30.2699,-15.4143c16.7006,-8.44619 31.94,-16.8924 34.2363,-18.3705c3.5489,-2.74501 -0.4175,-6.5458 -49.6844,-48.3544c-29.4349,-24.7051 -54.2771,-45.3983 -55.3209,-45.8206c-1.04379,-0.4223 -2.92261,2.5339 -3.9664,6.3346ZM4.94873,490.113c-3.36498,11.5217 -5.46809,21.1917 -4.83716,21.8089c0.841245,0.822977 52.1572,-5.14361 53.2087,-6.37807c0.84125,-0.617233 -39.3282,-36.211 -41.0107,-36.211c-0.84124,0 -4.20622,9.2585 -7.36089,20.7802Z" style="fill:#000;"/></g><g transform="matrix(0.439453,0,0,0.439453,329.953,30.6074)"><path d="M362.586,2.2015c-34.3139,9.9201 -66.3676,36.787 -82.189,69.0274c-9.0408,18.3935 -9.6572,39.4737 -1.4383,63.2406l6.1642,17.9802l-44.793,46.2938l-71.5044,-72.7474l-71.2989,-72.7474l0.61641,-9.0934c1.02737,-12.1935 -2.87661,-19.4269 -17.0542,-31.6204l-11.5065,-9.7134l-21.5746,21.4935l-21.3691,21.4936l10.6846,10.7468c11.9174,12.1934 24.4512,17.9802 35.5467,16.7402c7.397,-0.8267 8.01342,-0.2067 77.2576,70.8874c38.2179,39.267 69.6551,72.3341 69.4497,73.3674c0,1.0333 -34.3139,33.067 -76.2303,71.0941c-94.9283,86.3875 -132.324,122.555 -137.667,132.888c-17.6706,35.1337 8.01342,76.4675 47.6696,76.4675c25.8895,0 40.2726,-12.4001 92.0516,-78.9475c19.9309,-25.6269 54.2447,-69.4407 76.2303,-97.1343c22.191,-27.6937 41.5054,-51.6672 42.9437,-53.5273c2.2602,-3.1 4.1095,-1.86 15.205,9.3001l12.5338,12.6068l-8.6298,9.9201c-9.4518,10.7468 -11.712,16.5335 -9.6572,24.8003c1.6437,6.2001 159.447,169.468 165.816,171.328c8.8353,2.89336 15.8214,-1.65335 43.7656,-28.5203c26.7114,-25.6269 28.3552,-27.6936 28.3552,-35.1337c0,-9.50677 4.5204,-4.34005 -88.3531,-101.061c-45.2039,-46.9138 -76.8467,-78.3275 -79.9288,-79.1542c-7.397,-1.86 -12.9447,0.4134 -21.7801,8.8868l-7.6024,7.4401l-13.9722,-13.8468l-13.7666,-13.8469l17.4651,-17.7735c9.6572,-9.7134 19.9309,-19.4268 22.8075,-21.7002c5.3423,-3.72 5.5477,-3.72 17.4651,0.62c9.0408,3.3067 17.2597,4.3401 31.6428,4.5467c18.698,0.2067 20.5472,-0.2066 34.9303,-7.4401c45.8203,-22.7335 72.5318,-65.7206 69.2442,-111.188c-0.6164,-8.4734 -2.6711,-20.0469 -4.5204,-25.4203l-3.493,-9.9201l-34.5194,34.1004c-43.5601,43.4005 -41.5054,42.9871 -68.2168,16.1202c-26.095,-26.247 -26.506,-23.9736 14.794,-65.5141c27.1223,-27.2802 32.2592,-33.2736 29.3825,-34.927c-5.9587,-3.3067 -39.8616,-3.5134 -50.9571,-0.4133Z" style="fill:#000;"/></g><g transform="matrix(1.30097,0,1.2326e-32,1.30097,577.644,-541.299)"><path d="M268.158,532.43c0,9.584 -3.758,18.285 -9.865,24.768c-1.051,13.675 -9.715,25.218 -21.793,30.423l0,0.127c-14.748,8.588 -23.567,23.247 -26.249,40.834l-13.638,0l0,-40.797c0.09,-12.714 4.089,-20.858 12.474,-25.883c3.067,-1.764 5.853,-3.782 8.23,-6.018c6.224,2.236 11.732,6.618 15.235,12.857c0.728,1.225 2.032,1.918 3.324,1.918c0.624,0 1.278,-0.154 1.863,-0.501c1.867,-1.024 2.531,-3.349 1.485,-5.19l-0.026,0c-3.924,-6.979 -9.892,-12.129 -16.664,-15.197c3.477,-5.344 5.405,-11.706 5.315,-19.349c0,-0.037 0.051,-0.076 0.051,-0.127c0,-3.452 -0.511,-6.812 -1.429,-9.97c7.963,-1.521 14.977,-5.561 20.141,-11.25c1.432,-1.572 1.327,-3.988 -0.255,-5.394c-1.574,-1.417 -3.951,-1.292 -5.357,0.243c-4.5,4.897 -10.569,8.244 -17.471,9.165c-5.546,-10.276 -15.859,-17.573 -27.949,-18.903c0.807,-6.518 3.745,-12.332 8.165,-16.756c1.457,-1.482 1.457,-3.9 0,-5.371c-1.483,-1.496 -3.937,-1.496 -5.418,0c-5.66,5.666 -9.446,13.23 -10.392,21.654c-14.198,-1.789 -25.138,-13.842 -25.162,-28.515c0,-2.084 -1.727,-3.822 -3.771,-3.822c-2.161,0 -3.849,1.738 -3.849,3.822c0,2.479 0.243,4.843 0.717,7.169c-5.382,4.656 -12.078,7.006 -18.787,7.006c-3.311,0 -6.634,-0.586 -9.764,-1.724c0,0 -0.052,-0.014 -0.09,-0.025c-3.859,-1.393 -7.4,-3.609 -10.467,-6.675c-1.468,-1.484 -3.897,-1.484 -5.394,0c-1.496,1.481 -1.496,3.89 0,5.384c3.144,3.131 6.686,5.56 10.454,7.31c-0.753,9.495 -6.275,17.662 -13.994,22.25c-4.46,-6.774 -11.17,-12.141 -19.413,-14.763c-2.059,-0.638 -4.192,0.473 -4.845,2.48c-0.562,2.007 0.462,4.142 2.493,4.768c6.122,1.941 11.043,5.713 14.582,10.519c-2.375,0.638 -4.816,0.983 -7.412,0.983l-0.463,0c-9.789,0 -18.787,3.899 -25.33,10.278c-1.548,1.469 -1.584,3.885 -0.062,5.381c0.725,0.768 1.724,1.151 2.76,1.151c0.871,0 1.828,-0.358 2.569,-1.073c5.19,-5.063 12.269,-8.117 20.065,-8.117l0.461,0c18.352,0 33.6,-13.666 35.99,-31.379c2.608,0.563 5.213,0.87 7.86,0.87c7.451,0 14.967,-2.313 21.291,-6.889c2.311,5.277 5.968,9.89 10.404,13.47c-4.524,5.573 -7.183,12.192 -7.884,18.965c-1.905,-0.306 -3.911,-0.472 -5.919,-0.472c-5.75,0 -11.591,1.365 -17.023,4.27c-1.865,0.986 -2.569,3.296 -1.584,5.163c0.691,1.266 2.033,2.008 3.4,2.008c0.625,0 1.188,-0.139 1.738,-0.461c4.371,-2.289 8.948,-3.375 13.469,-3.375c2.019,0 4.014,0.219 5.919,0.625c0.828,7.72 4.168,15.274 9.903,21.28c0.769,0.796 1.751,1.178 2.738,1.178c0.932,0 1.902,-0.347 2.658,-1.051c1.561,-1.467 1.599,-3.857 0.115,-5.38l-0.025,0c-5.1,-5.394 -7.795,-12.242 -7.973,-19.171c0,-0.102 0.024,-0.18 0,-0.293l0,-0.424c0,-6.725 2.327,-13.371 6.928,-18.713c4.845,2.416 10.364,3.822 16.204,3.822c0,0 0.028,0.012 0.067,0.012l0.061,0c15.822,0.053 28.631,12.837 28.692,28.656c-3.001,-0.792 -6.095,-1.202 -9.264,-1.202c-4.537,0 -9.139,0.831 -13.574,2.659c-1.969,0.807 -2.901,3.017 -2.108,4.959c0.803,1.943 2.99,2.89 4.946,2.099c3.551,-1.418 7.172,-2.108 10.736,-2.108c2.875,0 5.726,0.433 8.395,1.263c-0.933,4.271 -2.76,7.694 -5.597,10.735c-0.218,0.193 -0.425,0.408 -0.587,0.664c-2.176,2.134 -4.781,4.101 -8.002,6.057c-11.028,6.44 -16.322,18.125 -16.207,32.441l0,40.796l-13.01,0l0,-38.795c0,-14.247 -8.933,-27.762 -20.182,-32.568c-5.368,-2.083 -10.965,-5.572 -15.044,-10.135c-5.813,3.948 -12.793,6.274 -20.296,6.274c-7.528,0 -14.506,-2.287 -20.282,-6.211c-5.75,3.783 -12.691,5.994 -20.115,5.994c-20.414,0.005 -36.913,-16.537 -36.913,-36.922c0,-15.237 9.214,-28.312 22.405,-33.937c3.567,-16.26 17.969,-28.426 35.299,-28.426c0.92,0 1.764,0.077 2.621,0.129c6.531,-9.547 17.508,-15.812 29.946,-15.812c6.16,0 11.937,1.536 17.011,4.269c5.725,-3.807 12.574,-6.017 19.947,-6.017c9.47,0 18.096,3.695 24.562,9.689c2.71,-0.653 5.509,-1.034 8.436,-1.034c14.633,0 27.286,8.805 32.935,21.42c14.854,4.5 25.664,18.279 25.664,34.585c0,3.273 -0.435,6.428 -1.24,9.433c4.628,6.086 7.414,13.678 7.414,21.92" style="fill:#030505;fill-rule:nonzero;"/></g><g transform="matrix(0.488281,0,6.84775e-33,0.488281,1021.13,29.7539)"><path d="M14.346,77.6632c-12.0275,24.099 -15.3454,40.0288 -14.1012,69.8461c0.62211,21.0355 1.65896,26.9581 7.25795,41.6625c3.52529,9.3945 8.70954,20.8313 11.6127,25.5285c8.2948,14.296 27.9949,57.7966 35.4603,79.2406c10.1611,28.7961 13.2717,41.2541 15.5527,65.1487c2.90317,28.3878 3.52528,26.247 9.33164,32.3738l4.97688,5.3099l57.2341,0c35.2528,0 58.893,-0.8169 61.3815,-2.0422c6.8432,-3.6762 9.9537,-8.0707 12.2348,-31.3527c3.7326,-40.2329 16.1748,-77.4024 44.7919,-134.995c18.8707,-37.578 22.8107,-48.1978 25.7139,-70.0502c11.6127,-83.1209 -57.2341,-159.502 -142.878,-158.685c-9.7464,0 -23.4328,1.4296 -30.4834,2.8592c-41.0593,8.7818 -79.6301,38.3949 -98.086,75.1559ZM82.5707,428.386l4.1474,3.6761l-4.1474,2.8592c-5.59899,3.88033 -5.59899,15.7256 0,19.6059l4.1474,2.8592l-4.1474,3.6761c-5.18425,4.69725 -5.39162,13.6833 -0.41474,17.9721c3.31792,3.06342 10.7832,3.47188 61.1741,3.47188c54.7457,0 57.6489,-0.20423 61.5889,-4.08456c5.3916,-5.30994 5.1842,-11.641 -0.6221,-16.7467l-4.7695,-4.28879l4.7695,-4.69725c6.0137,-5.92262 6.0137,-10.0072 0,-15.9298l-4.7695,-4.69725l4.7695,-4.28879c5.8063,-5.1057 6.0137,-11.4368 0.6221,-16.7467c-3.94,-3.88032 -6.8432,-4.08452 -62.0036,-4.08452c-49.9762,0 -58.4783,0.4084 -61.1742,3.2676c-4.56214,4.49303 -4.1474,13.6833 0.82948,18.1763ZM103.308,493.676c0,3.47187 17.8338,14.0917 27.7876,16.5425c17.2117,4.28879 38.3634,-1.83805 49.7688,-14.296l3.94,-4.2888l-40.6445,0c-24.4697,0 -40.8519,0.81692 -40.8519,2.04229Z" style="fill:#000;"/></g></g></g></svg>
+      </div>
+
       <h3><span class="icon-pencil"></span> <span class="icon-tools"></span> <span class="icon-brain"></span> <span class="icon-lightbulb"></span></h3>
       <a href="https://brennannovak.com">https://brennannovak.com</a><br>
     </div>
