--- a/templates/wizard.html
+++ b/templates/wizard.html
@@ -119,13 +119,14 @@ dd { margin-left: 1em; font-style: italic; }
 
     <div class="left">
       <h4>Total Hours Worked: <%= hours_total %></h4>
-      <h4>Payment Due: $<%= money_total %></h4>
+      <h4>Payment Due: <%= currency %><%= money_total %></h4>
     </div>
 
     <div class="right text-right">
       <em>Design. Code. Freedom.</em><br>
       <em>Made with <a href="https://github.com/bnvk/Beardo" target="_blank">Beardo</a></em>
       <%= user.extra %>
+      <%= extra %>
     </div>
 
     <div class="clear"></div>
