--- a/templates/wizard.html
+++ b/templates/wizard.html
@@ -124,7 +124,7 @@ dd { margin-left: 1em; font-style: italic; }
 
     <div class="right text-right">
       <em>Design. Code. Freedom.</em><br>
-      <em>Made with <a href="https://github.com/bnvk/Beardo" target="_blank">Beardo</a></em>
+      <em>Made with <a href="https://github.com/bnvk/Conjuror" target="_blank">Conjuror</a></em>
       <%= user.extra %>
       <%= extra %>
     </div>
