Got everything working again

--- a/templates/wizard.html
+++ b/templates/wizard.html
@@ -99,6 +99,7 @@ dd { margin-left: 1em; font-style: italic; }
     <div class="left">
       <h1><%= generated_name %></h1>
       <h4><%= generated_date %></h4>
+      Invoice Number: <%= invoice_number %><br/>
       <%= client.contact %><br/>
       <%= client.tax_identification %><br/>
       <%= client.address %>
