--- a/templates/wizard.html
+++ b/templates/wizard.html
@@ -125,6 +125,9 @@ dd { margin-left: 1em; font-style: italic; }
 
     <div class="left">
       <h4>Invoice</h4>
+      <% if (data_message) { %>
+      <p><%= data_message %></p>
+      <% } %>
       <p>
         <strong>Total Hours Worked:</strong> <%= hours_total %><br>
         <strong>Payment Due:</strong> <%= currency %><%= money_total %>
