--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -135,10 +135,11 @@ dd { margin-left: 1em; font-style: italic; }
       <% if (resource.client) { %>
       <p>
         <strong>Bill To:</strong><br>
-        <%= resource.client.name %><br>
-        <%= resource.client.address %><br>
-        <%= resource.client.city %>, <%= resource.client.postal %><br>
-        <%= resource.client.country %>
+        <% if (resource.client.name) { %><%= resource.client.name %><br><% } %>
+        <% if (resource.client.tax_id) { %><%= resource.client.tax_id %><br><% } %>
+        <% if (resource.client.address) { %><%= resource.client.address %><br><% } %>
+        <% if (resource.client.city) { %><%= resource.client.city %>, <%= resource.client.postal %><br><% } %>
+        <% if (resource.client.country) { %><%= resource.client.country %><% } %>
       </p>
       <% } %>
     </div>
