reordered output CLI questions, tweaks to HTML templates

--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -148,7 +148,7 @@ dd { margin-left: 1em; font-style: italic; }
       <p>
         <%= user.display_name %><br>
         <%= user.address %><br>
-        <%= user.city_state %>, <%= user.display_name %><br>
+        <%= user.city_state %><br>
         <%= user.country %>
       </p>
       <% if (resource.payment) { %>
